fix alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -725,6 +725,9 @@ video {
 .left-10 {
 	left: 2.5rem;
 }
+.right-2 {
+	right: 0.5rem;
+}
 .z-10 {
 	z-index: 10;
 }
@@ -891,6 +894,9 @@ video {
 .w-80 {
 	width: 20rem;
 }
+.w-\[80\%\] {
+	width: 80%;
+}
 .w-3 {
 	width: 0.75rem;
 }
@@ -905,9 +911,6 @@ video {
 }
 .w-100\% {
 	width: 100%;
-}
-.min-w-\[80\%\] {
-	min-width: 80%;
 }
 .max-w-max {
 	max-width: -webkit-max-content;
@@ -979,9 +982,6 @@ video {
 }
 .whitespace-pre-wrap {
 	white-space: pre-wrap;
-}
-.whitespace-pre {
-	white-space: pre;
 }
 .whitespace-pre-line {
 	white-space: pre-line;
@@ -1075,10 +1075,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
 .bg-blue-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
@@ -1099,6 +1095,10 @@ video {
 }
 .p-1 {
 	padding: 0.25rem;
+}
+.px-1 {
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
@@ -1506,49 +1506,6 @@ video {
 }
 @media (min-width: 640px) {
 
-	.sm\:container {
-		width: 100%;
-		margin-right: auto;
-		margin-left: auto;
-		padding-right: 1.5rem;
-		padding-left: 1.5rem;
-	}
-
-	@media (min-width: 640px) {
-
-		.sm\:container {
-			max-width: 640px;
-		}
-	}
-
-	@media (min-width: 768px) {
-
-		.sm\:container {
-			max-width: 768px;
-		}
-	}
-
-	@media (min-width: 1024px) {
-
-		.sm\:container {
-			max-width: 1024px;
-		}
-	}
-
-	@media (min-width: 1280px) {
-
-		.sm\:container {
-			max-width: 1280px;
-		}
-	}
-
-	@media (min-width: 1536px) {
-
-		.sm\:container {
-			max-width: 1536px;
-		}
-	}
-
 	.sm\:absolute {
 		position: absolute;
 	}
@@ -1567,6 +1524,18 @@ video {
 
 	.sm\:right-0 {
 		right: 0px;
+	}
+
+	.sm\:left-6 {
+		left: 1.5rem;
+	}
+
+	.sm\:left-10 {
+		left: 2.5rem;
+	}
+
+	.sm\:left-0 {
+		left: 0px;
 	}
 
 	.sm\:mx-0 {
@@ -1615,6 +1584,23 @@ video {
 		width: auto;
 	}
 
+	.sm\:min-w-\[400px\] {
+		min-width: 400px;
+	}
+
+	.sm\:grid-cols-auto-415 {
+		grid-template-columns: repeat(auto-fill, minmax(415px, 1fr));
+	}
+
+	.sm\:p-2 {
+		padding: 0.5rem;
+	}
+
+	.sm\:px-3 {
+		padding-left: 0.75rem;
+		padding-right: 0.75rem;
+	}
+
 	.sm\:text-2xl {
 		font-size: 1.5rem;
 		line-height: 2rem;
@@ -1641,8 +1627,58 @@ video {
 		margin-top: 0px;
 	}
 
+	.md\:px-5 {
+		padding-left: 1.25rem;
+		padding-right: 1.25rem;
+	}
+
 	.md\:text-3xl {
 		font-size: 1.875rem;
 		line-height: 2.25rem;
+	}
+}
+@media (min-width: 1024px) {
+
+	.lg\:container {
+		width: 100%;
+		margin-right: auto;
+		margin-left: auto;
+		padding-right: 1.5rem;
+		padding-left: 1.5rem;
+	}
+
+	@media (min-width: 640px) {
+
+		.lg\:container {
+			max-width: 640px;
+		}
+	}
+
+	@media (min-width: 768px) {
+
+		.lg\:container {
+			max-width: 768px;
+		}
+	}
+
+	@media (min-width: 1024px) {
+
+		.lg\:container {
+			max-width: 1024px;
+		}
+	}
+
+	@media (min-width: 1280px) {
+
+		.lg\:container {
+			max-width: 1280px;
+		}
+	}
+
+	@media (min-width: 1536px) {
+
+		.lg\:container {
+			max-width: 1536px;
+		}
 	}
 }
